# usability_teleop

./: .gitignore  AGENTS.md  DATA_CONTRACTS.md  DEV_HISTORY.md  EXPERIMENTS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_v3.md  IMPLEMENTATION_PLAN_v4.md  IMPLEMENTATION_PLAN_v5.md  README.md  TASK_LIST.md  TASK_LIST_v2.md  TASK_LIST_v3.md  TASK_LIST_v4.md  TASK_LIST_v5.md  VALIDATION_v4.md  draft.tex  environment.yml  pyproject.toml
configs/: default.yaml  experiment.yaml  models.yaml  models_fast.yaml  models_full.yaml
data/raw/: User_risposte.xlsx  labels_full.csv  raw_features_full.csv  tempi_media.csv
scripts/: run_all.py
src/usability_teleop/analysis/: __init__.py  incremental.py  preprocessing.py  study.py
src/usability_teleop/cli/: commands_basic.py  commands_inference.py  commands_protocol.py  commands_prototype.py  commands_rq2.py  commands_rq23.py  commands_rq3.py  commands_study.py  common.py  main.py  parser.py
src/usability_teleop/config/: experiment.py  settings.py
src/usability_teleop/data/: __init__.py  contracts.py  ingestion.py  targets.py  validation.py
src/usability_teleop/evaluation/: __init__.py  classification.py  correlation.py  regression.py  regression_compare.py  regression_global.py  regression_target.py
src/usability_teleop/features/: __init__.py  ee_quat.py
src/usability_teleop/modeling/: __init__.py  cv.py  registry.py
src/usability_teleop/protocol/: __init__.py  estimation.py  estimation_classification.py  estimation_regression.py  explainability.py  final_models.py  selection.py  validation.py
src/usability_teleop/stats/: __init__.py  inference.py  inference_utils.py  permutation.py  permutation_classification.py  permutation_config.py  permutation_regression.py  permutation_shared.py  shap_analysis.py
src/usability_teleop/utils/: __init__.py  timing.py  (+1 more)
tests/: test_cli.py  test_data_ingestion.py  test_feature_sets.py  test_layout.py  test_model_registry.py  test_protocol_validation.py  test_stats_and_visualization.py  test_study_pipeline.py  test_targets.py  test_workflows.py
(+5 files in other folders)
